cmommit before change for description

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       src="https://kit.fontawesome.com/73b6199ed8.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&callback=myMap"></script>
+
 
     <title>React App</title>
   </head>
